Added DB, package structure

--- a/bin/src/main/resources/templates/url.html
+++ b/bin/src/main/resources/templates/url.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-    <label th:text="Hello"></label>
+    <label th:text="${url}"></label>
 </body>
 </html>
